fix: overflow properties to auto

--- a/src/assets/buttons.css
+++ b/src/assets/buttons.css
@@ -53,7 +53,8 @@ a {
 }
 
 .btn-continue-red {
-    background-color: var(--red-100);;
+    background-color: var(--red-100);
+    ;
 }
 
 .btn-continue-green,
